--- a/journal/2025-05-22.md
+++ b/journal/2025-05-22.md
@@ -9,17 +9,18 @@
 - Breakfast: 3 eggs, 1 slice sourdough
 - pre-Workout Snack: 1/3 cup steel cut oats
 - Post-workout snack: 2 eggs 1/2 cup egg whites 
-- Lunch: 
-- Afternoon snack:
-- Dinner:
-- Snack: 
+- Lunch: 5.5 oz chicken rice broccoli
+- Afternoon snack: 90/10 beef, rice peas carrots
+- Dinner: 6 oz chicken rice broccoli
+- Snack: 3 eggs 1/4 cup eggs whites
 
 ## 🧮 Est. Macros
 
-- **Calories:**  
-- **Protein:** 
-- **Carbs:**   
-- **Fat:**
+- **Calories:** 2,640 kcal  
+- **Protein:** 238g  
+- **Carbs:** 200g  
+- **Fat:** 90.8g
+
 
 ## 🏋️ Workout
 - **Focus:** Traps, lats, biceps, back
