mid day commit 05/24

--- a/journal/2025-05-23.md
+++ b/journal/2025-05-23.md
@@ -6,21 +6,20 @@
 
 ## 🍽️ Meals
 - Early morning snack: 1/4 cup steel cut oats
-- Breakfast: 
-- Pre-Workout: 
-- Post-Workout Snack: 
-- Lunch:
-- Snack: 
-- 3pm Lunch:
-- Dinner:
-- Snack: 
+- Breakfast: 3 eggs 2 small slices sourdough
+- Snack: 2 eggs 1/2 cup egg whites 1slice sourdough
+- Lunch: 1 cup ground beef, 3/4 cup sweet potato 1/2 cup peas carrots
+- 3pm Lunch: 7oz chicken breast, 3/4 cup rice, 1/2 cup peas carrots
+- Dinner: 7oz chicken breast (olive oil +coconut flour) 2/3 cup mashed sweet potato, 1/2 cup peas carrots
+- Snack: 1 egg 1/4 cup egg whites
 
 ## 🧮 Est. Macros
 
-- **Calories:**  
-- **Protein:** 
-- **Carbs:**   
-- **Fat:**
+- **Calories:** 3,125 kcal  
+- **Protein:** 248g  
+- **Carbs:** 261g  
+- **Fat:** 102.9g
+
 
 ## 🏋️ Workout
 - **Focus:** Chest
@@ -51,4 +50,4 @@
 ## 📸 Progress Pics
 
 
-[⬅ Back to Index](../index.md)
+[⬅ Back to Index](index.md)
