--- a/journal/2025-05-20.md
+++ b/journal/2025-05-20.md
@@ -57,4 +57,4 @@ Day 1 will be starting with legs. I've been eating just under my TDEE and achiev
 
 ![[IMG_4541.png|150]]![[IMG_4535.png|150]]
 
-[⬅ Back to Index](../index.md)
+[⬅ Back to Index](index.md)
