--- a/journal/2025-05-24.md
+++ b/journal/2025-05-24.md
@@ -1,58 +1,80 @@
-# 🗓️ {{date:YYYY-MM-DD}} – Day X
+# 🗓️ 2025-05-24 – Day XX
 
 ## 📊 Weight
-- Morning weight: 
-- Body fat % (if scanned): 
+- Morning weight: (not provided)
+- Body fat: (not provided)
 
 ## 🍽️ Meals
-- 5am: 1/4 cup steel cut oats
-- **Breakfast:**  2 eggs 1 slice sourdough
-- **Pre-workout:**  1/3 cup steel cut oats
-- **Lunch:**  7oz chicken breast 3/4 cup sweet potato 1 cup broccoli
-- **Afternoon Meal:**  
-- **Dinner:**  
-- **Evening Snack:**  
-- **Other (beer, etc):**  
+
+- **Early Meal (5:00 AM)**  
+  - 1/4 cup steel cut oats (cooked)
+
+- **Breakfast (6:00 AM)**  
+  - 3 large eggs  
+  - 1.5 slices sourdough toast
+
+- **Pre-Workout (9:30 AM)**  
+  - 1/3 cup steel cut oats  
+  - 1 scoop Magnum Quattro (with water)  
+  - 10 gummy bears
+
+- **Lunch (1:00 PM)**  
+  - 7 oz chicken breast  
+  - 3/4 cup sweet potato  
+  - 1 cup broccoli
+
+- **3PM Snack**  
+  - 7.25 oz chicken breast  
+  - 6 asparagus spears  
+  - 3/4 cup sweet potato
+
+- **Pre-Dinner Snack (5:00 PM)**  
+  - 1 egg  
+  - 1/3 cup egg whites  
+  - 1 slice sourdough  
+  - 1/2 tbsp butter
+
+- **Dinner (7:00 PM)**  
+  - Blackened Cajun Chicken (Craft Beer Market)  
+  - Mashed potatoes  
+  - Kale with cheese
+
+- **Evening (Optional)**  
+  - 2 non-alcoholic beers (~120 kcal total)
 
 ## 🧮 Est. Macros
-- **Calories:**   
-- **Protein:**  
-- **Carbs:**  
-- **Fat:**  
+
+- **Calories:** ~3100 kcal  
+- **Protein:** ~231g  
+- **Carbs:** ~270g  
+- **Fat:** ~94g  
 
 ## 🏋️ Workout
-- Focus:  legs, abs biceps
-- Exercises:  
-	- back squats (attempt with new body comp)
-	- ham curls
-	- TRX pike
-	- see-saw on ball
-	- bicep curls
+- **Focus:** Legs, Biceps, Abs
+- Exercises:
+  - Back Squats – 3x6–8 (moderate weight)
+  - Hamstring Curls – 3x12–15
+  - Incline Dumbbell Curls – 3x12
+  - EZ Bar Curls – 3x10
+  - Cable Crunches – 3x15
+  - Leg Raises – 3x12
 
 ## 🏃 Cardio
-- Type:  
-- Duration / Distance:  
-- Intensity:  
-- Active calories (watch):  
+- Walking: ~13,000 steps
 
 ## 😴 Sleep
-- Duration:  
-- Quality:  
+- Time: (not provided)
+- Quality: (not provided)
 
 ## 🧠 Mood
-- Pre-workout mood:  A bit slow waking up today
-- Post-workout mood:  
-- Notes:  
+- Pre-workout mood: (you felt hungry and ready)
+- Post-workout mood: (not logged)
+- Notes: Hunger was high despite large meals — good sign of recovery and lean muscle activity.
 
 ## 🍫 Cheat Calories
-- Items:  gummy bears as pre-workout (1)
-- Estimated calories:  
-
-## 🧍 Progress
-- Steps today:  
-- Recovery/DOMS:  
+- 2 non-alcoholic beers (~120 kcal)
 
 ## 📸 Progress Pictures
-- [Attach or link here]
+- (Add here)
 
-[[INDEX]]
+[🔙 Back to Index](../index.md)
