Fix yesterdays journal

--- a/journal/2025-05-24.md
+++ b/journal/2025-05-24.md
@@ -52,15 +52,14 @@
 ## 🏋️ Workout
 - **Focus:** Legs, Biceps, Abs
 - Exercises:
-  - Back Squats – 3x6–8 (moderate weight)
-  - Hamstring Curls – 3x12–15
-  - Incline Dumbbell Curls – 3x12
-  - EZ Bar Curls – 3x10
-  - Cable Crunches – 3x15
-  - Leg Raises – 3x12
+	- Hamstring curls
+	- Leg extensions
+	- Hammer curls
+	- TRX Pike
+
 
 ## 🏃 Cardio
-- Walking: ~13,000 steps
+- Walking: ~21000
 
 ## 😴 Sleep
 - Time: (not provided)
