--- a/journal/2025-05-20.md
+++ b/journal/2025-05-20.md
@@ -2,40 +2,40 @@
 
 ## 📊 Weight
 - Morning weight: 171.0
-- Body fat: 11.3%
+- Body fat % (if scanned): 11.3%
 
 ## 🍽️ Meals
-- Breakfast: 3 large eggs, 1 slice sourdough bread 1 tbs butter 
-- Pre-Workout: 1/3 cup steel cut oats
-- Post-Workout Snack: 
-- Lunch: 3/4 cup lean ground beef , 3/4 cup long grain brown rice, 1/2 cup peas carrots
-- Snack: 2 eggs, 1/2 cup egg whites
-- 3pm Lunch: 6.5oz chicken breast, 1 cup long grain brown rice, 1/2 cup peas carrots 
-- Dinner: 6oz chicken breast 1 cup long grain brown rice, 1/2 cup peas carrots
-- Snack: 2 eggs 1/2 cup egg whites
+- 5am:
+- **Breakfast:** 3 large eggs, 1 slice sourdough bread 1 tbs butter 
+- **Pre-workout:** 1/3 cup steel cut oats
+- **Lunch:** 3/4 cup lean ground beef , 3/4 cup long grain brown rice, 1/2 cup peas carrots
+- **Afternoon Meal:** 6.5oz chicken breast, 1 cup long grain brown rice, 1/2 cup peas carrots 
+- **Dinner:** 6oz chicken breast 1 cup long grain brown rice, 1/2 cup peas carrots
+- **Evening Snack:** 2 eggs 1/2 cup egg whites
+- **Other (beer, etc):** 
 
 ## 🧮 Est. Macros
-
-- **Calories:** **~2,663 kcal** 
-- **Protein:** ~135g (earlier) + 57 + 25 = **~217g** ✅    
-- **Carbs:** ~165g (earlier) + 46 = **~211g** (target: 254–266g)    
-- **Fat:** ~86g (earlier) + 6 + 10 = **~102g** (target: ~100g)
+- **Calories:** ~2,663 kcal
+- **Protein:** ~135g (earlier) + 57 + 25 = ~217g ✅
+- **Carbs:** ~165g (earlier) + 46 = ~211g (target: 254–266g)
+- **Fat:** ~86g (earlier) + 6 + 10 = ~102g (target: ~100g)
 
 ## 🏋️ Workout
-- **Focus:** Chest
-- Exercises:
-	- Chest press 
-	- Bayesian curls
-	- overhead tricep push
-	- bench dumbell pullovers 60 lbs
+- Focus: Chest
+- Exercises:  
+	- Chest press  
+	- Bayesian curls  
+	- Overhead tricep push  
+	- Bench dumbbell pullovers 60 lbs  
 
 ## 🏃 Cardio
-- Type: 
-- Duration / Distance:
-- Intensity:
+- Type:  
+- Duration / Distance:  
+- Intensity:  
+- Active calories (watch):  
 
 ## 😴 Sleep
-- Time: 7 hours
+- Duration: 7 hours
 - Quality: Excellent
 
 ## 🧠 Mood
@@ -45,16 +45,14 @@
 
 ## 🍫 Cheat Calories
 - Items: 0
-- Estimated calories/macros: 0
+- Estimated calories: 0
 
-## 📉 Body Composition
-- Evolt scan data (if applicable): 
-![[IMG_4545.png|250]]![[IMG_4552.png|250]]
-## 🗒️ Personal Notes About Today
-Day 1 will be starting with legs. I've been eating just under my TDEE and achieved approx 11.5% body fat. Time to increase calories.
+## 🧍 Progress
+- Steps today: 
+- Recovery/DOMS: 
 
-## 📸 Progress Pics
+## 📸 Progress Pictures
+- ![[IMG_4541.png|150]]![[IMG_4535.png|150]]
+- ![[IMG_4545.png|250]]![[IMG_4552.png|250]]
 
-![[IMG_4541.png|150]]![[IMG_4535.png|150]]
-
-[⬅ Back to Index](index.md)
+[[INDEX]]
