--- a/journal/2025-05-21.md
+++ b/journal/2025-05-21.md
@@ -1,40 +1,38 @@
 # 🗓️ 2025-05-21 – Day 2
+
 ## 📊 Weight
 - Morning weight: 
-- Body fat: 
+- Body fat % (if scanned): 
 
 ## 🍽️ Meals
-- Early morning snack: 1/4 cup steel cut oats
-- Breakfast: 4 eggs, 1 slice sourdough bread
-- Snack: 2 eggs, 1/2 cup whites
-- Lunch: 5.75 oz chicken breast, 1 cup rice, 1 cup broccoli, 1 tbs teriyaki sauce
-- Dinner: 5.5oz chicken breast 1 cup broccoli 1 cup rice
-- 8pm dinner:
-## 🔢 Daily Macro Summary
+- 5am: 1/4 cup steel cut oats
+- **Breakfast:** 4 eggs, 1 slice sourdough bread
+- **Pre-workout:**  
+- **Lunch:** 5.75 oz chicken breast, 1 cup rice, 1 cup broccoli, 1 tbs teriyaki sauce
+- **Afternoon Meal:**  
+- **Dinner:** 5.5oz chicken breast 1 cup broccoli 1 cup rice
+- **Evening Snack:** 
+- **Other (beer, etc):** 8pm dinner:
 
-| Meal        | Calories  | Protein  | Carbs    | Fat       |
-| ----------- | --------- | -------- | -------- | --------- |
-| Early Snack | 150       | 5g       | 27g      | 2.5g      |
-| Breakfast   | 400       | 28g      | 24g      | 21g       |
-| Snack       | 203       | 25g      | 2g       | 10g       |
-| Lunch       | 534       | 56.5g    | 57g      | 6.7g      |
-| Dinner      | 488       | 53.5g    | 51g      | 5.7g      |
-| Extra Meal  | 529       | 37g      | 44g      | 22.3g     |
-| **Total**   | **2,304** | **205g** | **205g** | **68.2g** |
-
+## 🧮 Est. Macros
+- **Calories:** 2,304
+- **Protein:** 205g
+- **Carbs:** 205g
+- **Fat:** 68.2g
 
 ## 🏋️ Workout
-- **Focus:** Rest/Light Cardio
+- Focus: Rest/Light Cardio
+- Exercises:  
 
 ## 🏃 Cardio
 - Type: Run
 - Duration / Distance: 3.34km
 - Intensity: Moderate
-- Time: 17:19
-- Cadence: Bad recording
+- Active calories (watch):  
+- Notes: Time: 17:19, Cadence: Bad recording
 
 ## 😴 Sleep
-- Time: 6
+- Duration: 6
 - Quality: 
 
 ## 🧠 Mood
@@ -44,14 +42,13 @@
 
 ## 🍫 Cheat Calories
 - Items: 
-- Estimated calories/macros: 
+- Estimated calories: 
 
-## 📉 Body Composition
-- Evolt scan data (if applicable): 
+## 🧍 Progress
+- Steps today: 
+- Recovery/DOMS: 
 
-## 🗒️ Personal Notes About Today
- 
-## 📸 Progress Pics
+## 📸 Progress Pictures
+- 
 
-
-[⬅ Back to Index](index.md)
+[[INDEX]]
