--- a/journal/2025-05-23.md
+++ b/journal/2025-05-23.md
@@ -1,37 +1,37 @@
-# 🗓️ 2025-05-23 – Day 1
+# 🗓️ 2025-05-23 – Day 4
 
 ## 📊 Weight
 - Morning weight: 
-- Body fat: 
+- Body fat % (if scanned): 
 
 ## 🍽️ Meals
-- Early morning snack: 1/4 cup steel cut oats
-- Breakfast: 3 eggs 2 small slices sourdough
-- Snack: 2 eggs 1/2 cup egg whites 1slice sourdough
-- Lunch: 1 cup ground beef, 3/4 cup sweet potato 1/2 cup peas carrots
-- 3pm Lunch: 7oz chicken breast, 3/4 cup rice, 1/2 cup peas carrots
-- Dinner: 7oz chicken breast (olive oil +coconut flour) 2/3 cup mashed sweet potato, 1/2 cup peas carrots
-- Snack: 1 egg 1/4 cup egg whites
+- 5am: 1/4 cup steel cut oats
+- **Breakfast:** 3 eggs, 2 small slices sourdough
+- **Pre-workout:** 
+- **Lunch:** 1 cup ground beef, 3/4 cup sweet potato, 1/2 cup peas carrots
+- **Afternoon Meal:** 7oz chicken breast, 3/4 cup rice, 1/2 cup peas carrots
+- **Dinner:** 7oz chicken breast (olive oil + coconut flour), 2/3 cup mashed sweet potato, 1/2 cup peas carrots
+- **Evening Snack:** 1 egg, 1/4 cup egg whites
+- **Other (beer, etc):** 2 eggs, 1/2 cup egg whites, 1 slice sourdough (mid-day snack)
 
 ## 🧮 Est. Macros
-
 - **Calories:** 3,125 kcal  
 - **Protein:** 248g  
 - **Carbs:** 261g  
 - **Fat:** 102.9g
 
-
 ## 🏋️ Workout
-- **Focus:** Chest
-- Exercises:
+- Focus: Chest
+- Exercises:  
 
 ## 🏃 Cardio
-- Type: 
-- Duration / Distance:
-- Intensity:
+- Type:  
+- Duration / Distance:  
+- Intensity:  
+- Active calories (watch):  
 
 ## 😴 Sleep
-- Time: 
+- Duration: 
 - Quality: 
 
 ## 🧠 Mood
@@ -41,13 +41,13 @@
 
 ## 🍫 Cheat Calories
 - Items: 0
-- Estimated calories/macros: 0
+- Estimated calories: 0
 
-## 📉 Body Composition
-- Evolt scan data (if applicable): 
-## 🗒️ Personal Notes About Today
+## 🧍 Progress
+- Steps today: 
+- Recovery/DOMS: 
 
-## 📸 Progress Pics
+## 📸 Progress Pictures
+- 
 
-
-[⬅ Back to Index](index.md)
+[[INDEX]]
