--- a/journal/2025-05-24.md
+++ b/journal/2025-05-24.md
@@ -1,79 +1,57 @@
-# 🗓️ 2025-05-24 – Day XX
+# 🗓️ 2025-05-24 – Day 5
 
 ## 📊 Weight
-- Morning weight: (not provided)
-- Body fat: (not provided)
+- Morning weight: 
+- Body fat % (if scanned): 
 
 ## 🍽️ Meals
-
-- **Early Meal (5:00 AM)**  
-  - 1/4 cup steel cut oats (cooked)
-
-- **Breakfast (6:00 AM)**  
-  - 3 large eggs  
-  - 1.5 slices sourdough toast
-
-- **Pre-Workout (9:30 AM)**  
-  - 1/3 cup steel cut oats  
-  - 1 scoop Magnum Quattro (with water)  
-  - 10 gummy bears
-
-- **Lunch (1:00 PM)**  
-  - 7 oz chicken breast  
-  - 3/4 cup sweet potato  
-  - 1 cup broccoli
-
-- **3PM Snack**  
-  - 7.25 oz chicken breast  
-  - 6 asparagus spears  
-  - 3/4 cup sweet potato
-
-- **Pre-Dinner Snack (5:00 PM)**  
-  - 1 egg  
-  - 1/3 cup egg whites  
-  - 1 slice sourdough  
-  - 1/2 tbsp butter
-
-- **Dinner (7:00 PM)**  
-  - Blackened Cajun Chicken (Craft Beer Market)  
-  - Mashed potatoes  
-  - Kale with cheese
-
-- **Evening (Optional)**  
-  - 2 non-alcoholic beers (~120 kcal total)
+- 5am: 1/4 cup steel cut oats (cooked)
+- **Breakfast:** 3 large eggs, 1.5 slices sourdough toast
+- **Pre-workout:** 1/3 cup steel cut oats, 1 scoop Magnum Quattro (with water), 10 gummy bears
+- **Lunch:** 7 oz chicken breast, 3/4 cup sweet potato, 1 cup broccoli
+- **Afternoon Meal:** 7.25 oz chicken breast, 6 asparagus spears, 3/4 cup sweet potato
+- **Dinner:** Blackened Cajun Chicken (Craft Beer Market), mashed potatoes, kale with cheese
+- **Evening Snack:** 1 egg, 1/3 cup egg whites, 1 slice sourdough, 1/2 tbsp butter
+- **Other (beer, etc):** 2 non-alcoholic beers (~120 kcal total)
 
 ## 🧮 Est. Macros
-
-- **Calories:** ~3100 kcal  
-- **Protein:** ~231g  
-- **Carbs:** ~270g  
-- **Fat:** ~94g  
+- **Calories:** ~3100 kcal
+- **Protein:** ~231g
+- **Carbs:** ~270g
+- **Fat:** ~94g
 
 ## 🏋️ Workout
-- **Focus:** Legs, Biceps, Abs
-- Exercises:
-	- Hamstring curls
-	- Leg extensions
-	- Hammer curls
-	- TRX Pike
-
+- Focus: Legs, Biceps, Abs
+- Exercises:  
+	- Hamstring curls  
+	- Leg extensions  
+	- Hammer curls  
+	- TRX Pike  
 
 ## 🏃 Cardio
-- Walking: ~21000
+- Type: Walking
+- Duration / Distance: ~21000 steps
+- Intensity: 
+- Active calories (watch): 
 
 ## 😴 Sleep
-- Time: (not provided)
-- Quality: (not provided)
+- Duration: 
+- Quality: 
 
 ## 🧠 Mood
-- Pre-workout mood: (you felt hungry and ready)
-- Post-workout mood: (not logged)
+- Pre-workout mood: You felt hungry and ready
+- Post-workout mood: 
 - Notes: Hunger was high despite large meals — good sign of recovery and lean muscle activity.
 
 ## 🍫 Cheat Calories
-- 2 non-alcoholic beers (~120 kcal)
+- Items: 2 non-alcoholic beers
+- Estimated calories: ~120 kcal
+
+## 🧍 Progress
+- Steps today: ~21000
+- Recovery/DOMS: 
 
 ## 📸 Progress Pictures
-- (Add here)
+- 
 
-[🔙 Back to Index](../index.md)
+[[INDEX]]
