--- a/journal/2025-05-25.md
+++ b/journal/2025-05-25.md
@@ -1,63 +1,54 @@
-# 🗓️ 2025-05-24 – Day Summary
+# 🗓️ 2025-05-25 – Day 6
 
 ## 📊 Weight
 - Morning weight: 
-- Body fat: 
+- Body fat % (if scanned): 
 
 ## 🍽️ Meals
-- **Breakfast:**  
-  - 1/4 cup steel cut oats  
-  - 3 eggs  
-  - 1 slice sourdough bread  
-  - 2 eggs  
-  - 1/2 cup egg whites
-
-- **Lunch:**  
-  - 8 oz chicken breast (olive oil + coconut flour coating)  
-  - 1 cup broccoli  
-  - 3/4 cup mashed sweet potato
-
-- **Dinner:**  
-  - 6 oz lean ground beef (90/10)  
-  - 3/4 cup brown rice  
-  - 1/2 cup peas + carrots
-
-- **Night Snack:**  
-  - 2 eggs  
-  - 1/2 cup egg whites  
-  - 1 slice sourdough bread
+- 5am: 
+- **Breakfast:** 1/4 cup steel cut oats, 3 eggs, 1 slice sourdough bread, 2 eggs, 1/2 cup egg whites
+- **Pre-workout:** 
+- **Lunch:** 8 oz chicken breast (olive oil + coconut flour coating), 1 cup broccoli, 3/4 cup mashed sweet potato
+- **Afternoon Meal:** 
+- **Dinner:** 6 oz lean ground beef (90/10), 3/4 cup brown rice, 1/2 cup peas + carrots
+- **Evening Snack:** 2 eggs, 1/2 cup egg whites, 1 slice sourdough bread
+- **Other (beer, etc):** 
 
 ## 🧮 Est. Macros
-
-- **Calories:** ~2,720 kcal  
-- **Protein:** ~205g  
-- **Carbs:** ~198g  
-- **Fat:** ~90g  
+- **Calories:** ~2,720 kcal
+- **Protein:** ~205g
+- **Carbs:** ~198g
+- **Fat:** ~90g
 
 ## 🏋️ Workout
-- Rest day
+- Focus: Rest day
+- Exercises:  
 
 ## 🏃 Cardio
-- Steps: 11,000  
-- Cardio: 
+- Type:  
+- Duration / Distance:  
+- Intensity:  
+- Active calories (watch):  
+- Notes: 11,000 steps
 
 ## 😴 Sleep
-- Time: 6
-- Quality: decent 
+- Duration: 6
+- Quality: Decent
 
 ## 🧠 Mood
 - Pre-workout mood: 
 - Post-workout mood: 
-- Notes: 
+- Notes: Rest day. Stuck to meal plan perfectly. Noticed continued downward weight trend despite eating above TEE — likely clean recomposition.
 
 ## 🍫 Cheat Calories
-- Items: A few gummy bears 
+- Items: A few gummy bears
 - Estimated calories: 100
 
-## 🧍 Personal Notes
-- Rest day. Stuck to meal plan perfectly. Noticed continued downward weight trend despite eating above TEE — likely clean recomposition. 
+## 🧍 Progress
+- Steps today: 11,000
+- Recovery/DOMS: 
 
 ## 📸 Progress Pictures
 - 
 
-[🔙 Back to Index](../index.md)
+[[INDEX]]
