--- a/journal/2025-05-22.md
+++ b/journal/2025-05-22.md
@@ -1,61 +1,58 @@
-# 🗓️ 2025-05-20 – Day 3
+# 🗓️ 2025-05-22 – Day 3
 
 ## 📊 Weight
 - Morning weight: 171.8
-- Body fat: 11.6%
+- Body fat % (if scanned): 11.6%
 
 ## 🍽️ Meals
-- 4am: 1/4 cup steel cut oats (130 cal)
-- Breakfast: 3 eggs, 1 slice sourdough
-- pre-Workout Snack: 1/3 cup steel cut oats
-- Post-workout snack: 2 eggs 1/2 cup egg whites 
-- Lunch: 5.5 oz chicken rice broccoli
-- Afternoon snack: 90/10 beef, rice peas carrots
-- Dinner: 6 oz chicken rice broccoli
-- Snack: 3 eggs 1/4 cup eggs whites
+- 5am: 1/4 cup steel cut oats (130 cal)
+- **Breakfast:** 3 eggs, 1 slice sourdough
+- **Pre-workout:** 1/3 cup steel cut oats
+- **Lunch:** 5.5 oz chicken, rice, broccoli
+- **Afternoon Meal:** 90/10 beef, rice, peas, carrots
+- **Dinner:** 6 oz chicken, rice, broccoli
+- **Evening Snack:** 3 eggs, 1/4 cup egg whites
+- **Other (beer, etc):** 
 
 ## 🧮 Est. Macros
-
-- **Calories:** 2,640 kcal  
-- **Protein:** 238g  
-- **Carbs:** 200g  
+- **Calories:** 2,640 kcal
+- **Protein:** 238g
+- **Carbs:** 200g
 - **Fat:** 90.8g
 
-
 ## 🏋️ Workout
-- **Focus:** Traps, lats, biceps, back
-- Exercises:
-	- Shoulder & back warm up
-	- freehand pulldowns 110 lbs x 10 x 3
-	- Rear delt cable pulls 12 x 10 
-	- Beysian Bicep curls 
-	- Pec cable fly
-	- 
+- Focus: Traps, lats, biceps, back
+- Exercises:  
+	- Shoulder & back warm-up  
+	- Freehand pulldowns 110 lbs x 10 x 3  
+	- Rear delt cable pulls 12 x 10  
+	- Bayesian bicep curls  
+	- Pec cable fly  
 
 ## 🏃 Cardio
 - Type: Light cycle
 - Duration / Distance: 30 min
 - Intensity: light (120 bpm)
+- Active calories (watch): 
 
 ## 😴 Sleep
-- Time: 7 hours
+- Duration: 7 hours
 - Quality: Excellent
 
 ## 🧠 Mood
 - Pre-workout mood: Excellent
 - Post-workout mood: Excellent
-- Notes: DOMS in legs, tricep. Feel rested and ready to go.
+- Notes: DOMS in legs, triceps. Feel rested and ready to go.
 
 ## 🍫 Cheat Calories
 - Items: 0
-- Estimated calories/macros: 0
+- Estimated calories: 0
 
-## 📉 Body Composition
-- Evolt scan data (if applicable): 
-## 🗒️ Personal Notes About Today
+## 🧍 Progress
+- Steps today: 
+- Recovery/DOMS: Legs, triceps
 
+## 📸 Progress Pictures
+- 
 
-## 📸 Progress Pics
-
-
-[⬅ Back to Index](index.md)
+[[INDEX]]
