Missing a meal in one day

--- a/journal/2025-05-21.md
+++ b/journal/2025-05-21.md
@@ -9,9 +9,9 @@
 - **Breakfast:** 4 eggs, 1 slice sourdough bread
 - **Pre-workout:**  
 - **Lunch:** 5.75 oz chicken breast, 1 cup rice, 1 cup broccoli, 1 tbs teriyaki sauce
-- **Afternoon Meal:**  
-- **Dinner:** 5.5oz chicken breast 1 cup broccoli 1 cup rice
-- **Evening Snack:** 
+- **Afternoon Meal:**  5.5oz chicken breast 1 cup broccoli 1 cup rice
+- **Dinner:** 1 cup lean ground beef 3/4 cup sweet potato, 1/2 peas carrots
+- **Evening Snack:** 2 eggs 1/2 cup egg whites scrambles
 - **Other (beer, etc):** 8pm dinner:
 
 ## 🧮 Est. Macros
