--- a/journal/2025-05-26.md
+++ b/journal/2025-05-26.md
@@ -7,20 +7,19 @@
 
 ## 🍽️ Meals
 - 5am: 1/4 cup steel cut oats
-- **Breakfast:** 3 eggs 1.5 slices sourdough bread 1/2 tbs butter
-- **Pre-workout:**  1/3 cup steel cut oats 1 banana
-- Post-workout: 1 scoop whey with vegegreens
-- **Lunch:**  1 cup ground beef lean, 3/4 cup sweet potato, 6 asparagus spears
-- **Afternoon Meal:**  2 eggs 1/2 cup egg whites 1tbs sugar free ketchup
-- 3pm Lunch: 
-- **Evening Snack:**  
-- **Other (beer, etc):**
+- **Breakfast:** 3 large eggs, 1.5 slices sourdough bread, 1/2 tbsp butter
+- **Pre-workout:** 1/3 slice sourdough, 1 small banana, protein shake with greens (30g protein)
+- **Lunch:** 1 cup lean ground beef, 3/4 cup mashed sweet potato, 6 asparagus spears
+- **Afternoon Meal:** 8 oz chicken breast (olive oil + coconut flour coating), 1 cup sweet potato or rice
+- **Dinner:** 6.9 oz chicken breast, 1 cup white rice, 1 cup broccoli
+- **Evening Snack:** 3 large eggs, 1.5 slices sourdough, 1/2 cup plain Greek yogurt
+- **Other (beer, etc):** none
 
 ## 🧮 Est. Macros
-- **Calories:**   
-- **Protein:**  
-- **Carbs:**  
-- **Fat:**
+- **Calories:** ~3,345 kcal  
+- **Protein:** ~268g  
+- **Carbs:** ~372g  
+- **Fat:** ~96g  
 
 ## 🏋️ Workout
 - Focus: Chest, biceps
@@ -35,8 +34,8 @@
 ## 🏃 Cardio
 - Type:  Run
 - Duration / Distance:  5km
-- Intensity:  
-- Active calories (watch):
+- Intensity:  Hard
+- Active calories (watch): 1380 total
 
 ## 😴 Sleep
 - Duration:  6.5 hours
@@ -48,11 +47,11 @@
 - Notes:
 
 ## 🍫 Cheat Calories
-- Items:  gummy bears as pre-workout (1)
+- Items:  
 - Estimated calories:  
 
 ## 🧍 Progress
-- Steps today:  
+- Steps today:  15790
 - Recovery/DOMS:  
 
 ## 📸 Progress Pictures
@@ -63,6 +62,8 @@
 ## 📉 Body Composition
 
 ## 🗒️ Personal Notes About Today
+
+This was a very active day, I'm worried about it cutting into my lean bulk and overtraining. I ate some additional food to try to make up for it, I will need lots of rest tonight. Unsure what this routine is going to do long term if I keep it up. So far so good.
 
 ## 📸 Progress Pics
 
