--- a/journal/2025-05-26.md
+++ b/journal/2025-05-26.md
@@ -10,7 +10,7 @@
 - **Breakfast:** 3 large eggs, 1.5 slices sourdough bread, 1/2 tbsp butter
 - **Pre-workout:** 1/3 slice sourdough, 1 small banana, protein shake with greens (30g protein)
 - **Lunch:** 1 cup lean ground beef, 3/4 cup mashed sweet potato, 6 asparagus spears
-- **Afternoon Meal:** 8 oz chicken breast (olive oil + coconut flour coating), 1 cup sweet potato or rice
+- **Afternoon Meal:** 8 oz chicken breast (olive oil + coconut flour coating), 3/4 cup rice
 - **Dinner:** 6.9 oz chicken breast, 1 cup white rice, 1 cup broccoli
 - **Evening Snack:** 3 large eggs, 1.5 slices sourdough, 1/2 cup plain Greek yogurt
 - **Other (beer, etc):** none
