added one last entry to meals for today

--- a/journal/2025-05-30.md
+++ b/journal/2025-05-30.md
@@ -11,14 +11,14 @@
 - **Lunch:** 1 cup lean ground beef (90/10), 3/4 cup sweet potato, 5 asparagus spears  
 - **Afternoon Meal:** 2 eggs, 1/2 cup egg whites  
 - **Dinner:** 6.5 oz chicken breast (coated in olive oil & coconut flour), 1 cup long grain brown rice  
-- **Evening Snack:** 1 slice sourdough bread, 1/4 cup steel cut oats, 1 banana  
+- **Evening Snack:** 1 slice sourdough bread, 1/4 cup steel cut oats, 1 banana, 1 scoop whey protein (140 kcal, 30g protein)  
 - **Other (beer, etc):** 2 non-alcoholic beers (60 kcal each, 13g carbs, 7g sugar)
 
 ## 🧮 Est. Macros
-- **Calories:** ~3040 kcal  
-- **Protein:** ~245g  
-- **Carbs:** ~331g  
-- **Fat:** ~95g  
+- **Calories:** ~3180 kcal  
+- **Protein:** ~275g  
+- **Carbs:** ~333g  
+- **Fat:** ~97g  
 
 ## 🏋️ Workout
 - Focus: Chest & Biceps  
@@ -28,26 +28,26 @@
 - Type: Running + walking  
 - Duration / Distance: 2.5 km run + walking  
 - Intensity: Moderate  
-- Active calories (watch): ~900 kcal
+- Active calories (watch): 1083 kcal
 
 ## 😴 Sleep
 - Duration:  5.5 hours
-- Quality:  A bit short, woke up before 5am. 
+- Quality:  Not great, but felt ok. Tired early.
 
 ## 🧠 Mood
 - Pre-workout mood:  
 - Post-workout mood:  
-- Notes: Managed hunger and energy well despite high activity. Protein and carb timing were effective. Slight carb deficit made up in the evening.
+- Notes: Managed hunger and energy well despite high activity. Protein and carb timing were effective. Slight carb deficit made up in the evening. Added final protein shake after reviewing activity data.
 
 ## 🍫 Cheat Calories
 - Items: 2 non-alcoholic beers  
 - Estimated calories: 120 kcal
 
 ## 🧍 Progress
-- Steps today:  ~14000
-- Recovery/DOMS: back and shoulders
+- Steps today:  
+- Recovery/DOMS: Back, shoulders
 
 ## 📸 Progress Pictures
-- [Attach or link here]
+- 
 
 [[INDEX]]
