barn owl run day

--- a/journal/2025-06-02.md
+++ b/journal/2025-06-02.md
@@ -5,34 +5,34 @@
 - Body fat % (if scanned): 
 
 ## 🍽️ Meals
-- 5am:
-- **Breakfast:** 
-- **Pre-workout:**  
-- **Lunch:**  
-- **Afternoon Meal:**  
-- **Dinner:**  
-- **Evening Snack:**  
+- **Breakfast:** 3 eggs 1 slice sourdough
+- **Snack:**  1/3 cup oatmeal, 1 scoop whey protein shake
+- **11am Lunch:**  6.5 oz chicken breast 1/2 cup peas carrots, 3/4 cup long grain brown rice
+- **2pm lunch:**  3/4 cup lean beef, 1/2 cup peas carrots, 1 cup long grain brown rice
+- **Pre-run snack:**  2/3 cup oatmeal 1 banana
+- **Dinner:**  6.5oz chicken breast, 3/4 cup rice, 1/2 cup peas carrots
+- **Night snack**: 2 eggs, 1/2 cup egg whites, 1.5 slice sourdough
 - **Other (beer, etc):**  
 
 ## 🧮 Est. Macros
-- **Calories:**   
-- **Protein:**  
-- **Carbs:**  
-- **Fat:**  
+- **Calories:** ~3,370 kcal    
+- **Protein:** ~276g    
+- **Carbohydrates:** ~362g    
+- **Fat:** ~85g
 
 ## 🏋️ Workout
-- Focus:  legs, abs biceps
+- Focus:  Rest
 - Exercises:  
 
 ## 🏃 Cardio
-- Type:  
-- Duration / Distance:  
+- Type:  Run
+- Duration / Distance:  5km
 - Intensity:  
 - Active calories (watch):  
 
 ## 😴 Sleep
-- Duration:  
-- Quality:  
+- Duration:  7 hours
+- Quality:  Slept ~9-11pm, woken up from noise, fell back asleep by 11:30-12
 
 ## 🧠 Mood
 - Pre-workout mood:  
