barn owl run day

--- a/journal/2025-06-02.md
+++ b/journal/2025-06-02.md
@@ -26,13 +26,13 @@
 
 ## 🏃 Cardio
 - Type:  Run
-- Duration / Distance:  5km
-- Intensity:  
-- Active calories (watch):  
+- Duration / Distance:  5km (27:32)
+- Intensity:  Hard
+- Active calories (watch):  ~350
 
 ## 😴 Sleep
 - Duration:  7 hours
-- Quality:  Slept ~9-11pm, woken up from noise, fell back asleep by 11:30-12
+- Quality:  Slept ~9-11pm, woken up from noise, fell back asleep by 11:30pm-12am-5am
 
 ## 🧠 Mood
 - Pre-workout mood:  
@@ -40,12 +40,12 @@
 - Notes:  
 
 ## 🍫 Cheat Calories
-- Items:  gummy bears as pre-workout (1)
+- Items:  
 - Estimated calories:  
 
 ## 🧍 Progress
-- Steps today:  
-- Recovery/DOMS:  
+- Steps today:  ~13500
+- Recovery/DOMS:  back, traps, arms
 
 ## 📸 Progress Pictures
 - [Attach or link here]
