Added workout plan and last entries

--- a/journal/June/2025-06-04.md
+++ b/journal/June/2025-06-04.md
@@ -1,18 +1,17 @@
 # 🗓️ 2025-06-04 – Day X
 
 ## 📊 Weight
-- Morning weight: 
+- Morning weight: 170
 - Body fat % (if scanned): 
 
 ## 🍽️ Meals
-- **5am**: 3 eggs, 1 slice sourdough 1tbs butter
-- **Breakfast:** 
-- **Pre-workout:**  
-- **Lunch:**  
-- **Afternoon Meal:**  
-- **Dinner:**  
-- **Evening Snack:**  
-- **Other (beer, etc):**  
+- **5am**: 5 eggs, 2 slice sourdough 2 tbs butter
+- **Mid-morning snack:**  1/3 cup oatmeal
+- **Lunch:**  1 cup lean beef 1 cup long grain brown rice
+- **Afternoon Meal:**  8.6 oz chicken breast, 1 cup quinoa, 1 cup broccoli
+- **Pre-run snack:** 3/4 cup steel cut oats 1 banana  
+- **Dinner:**  1 cup ground beef, 1.25 cups rice, 1/2 cup peas carrots
+- **Night snack:**  2 eggs, 1/2 cup egg whites, 1 slice sourdough 1 tbs butter 1/4 cup steel cut oats
 
 ## 🧮 Est. Macros
 - **Calories:**   
@@ -21,31 +20,31 @@
 - **Fat:**  
 
 ## 🏋️ Workout
-- Focus:  legs, abs biceps
+- Focus:  rest
 - Exercises:  
 
 ## 🏃 Cardio
-- Type:  
-- Duration / Distance:  
-- Intensity:  
-- Active calories (watch):  
+- Type:  jog
+- Duration / Distance:  5km
+- Intensity:  light
+- Active calories (watch):  ~1000
 
 ## 😴 Sleep
-- Duration:  
-- Quality:  
+- Duration: 6 hours  
+- Quality:  good
 
 ## 🧠 Mood
 - Pre-workout mood:  
 - Post-workout mood:  
-- Notes:  
+- Notes:  Tires, doms, but all signs point to recovery jog being ok
 
 ## 🍫 Cheat Calories
-- Items:  gummy bears as pre-workout (1)
+- Items:  
 - Estimated calories:  
 
 ## 🧍 Progress
-- Steps today:  
-- Recovery/DOMS:  
+- Steps today:  ~17000
+- Recovery/DOMS:  legs, back
 
 ## 📸 Progress Pictures
 - [Attach or link here]
