Added latest logs. 2 year no drinking

--- a/journal/June/2025-06-06.md
+++ b/journal/June/2025-06-06.md
@@ -9,11 +9,13 @@
 ## 🍽️ Meals
 - **Breakfast:** 3 eggs 1 slice sourdough
 - **Pre-workout:**  2/3 cup oatmeal 1 banana
+- **Post workout**: 2 eggs 1/2 cup egg whites 1 slice sourdough
 - **Lunch:**  9.5oz chicken breast 1 cup long grain brown rice, 1 cup broccoli
-- **Afternoon Meal:**  
-- **Dinner:**  
-- **Evening Snack:**  
-- **Other (beer, etc):**  
+- **Afternoon Meal:**  1/2 cup steel cut oats 1 scoop whey protein with water
+- **Snack:**  3/4 cup lean beef, 3/4 cup quinoa
+- **Dinner:**  7.5 oz chicken breast, 1 cup brown jasmine rice, 1/2 cup peas carrots
+- **Snack**: 1/2 cup steel cut oats 1 banana
+- **Other (beer, etc):**  1 non-alcoholic beer 1 scoop ice cream
 
 ## 🧮 Est. Macros
 - **Calories:**   
