Added 2 year anniversary to June 9 log

--- a/journal/June/2025-06-09.md
+++ b/journal/June/2025-06-09.md
@@ -1,5 +1,6 @@
 # 🗓️ 2025-06-09 – Day X
 
+🛡️ ***Today marks 2 years without any alcohol***  
 ## 📊 Weight
 - Morning weight: 171.0
 - Body fat % (if scanned): 11.4%
