Added self-critique section as sanity check

--- a/journal/June/2025-06-10.md
+++ b/journal/June/2025-06-10.md
@@ -2,19 +2,24 @@
 
 ## 📊 Weight
 - Morning weight: 169.8
-- Body fat % (if scanned): 11.4%
-	- *Note: Possibly dehydrated from yesterday. It was very hot and the 5km run made me sweat a lot*
-- HRV: 48ms at 5am - 61ms by 7am
-- RHR: 63 at 5am - 58 by 7am
+- Body fat %: 11.4%
+	- *Note: Possibly dehydrated from yesterday. It was very hot and the 5km run*
+- HRV: 
+	- 48ms at 5am 
+	- 61ms by 7am
+	- 134ms by afternoon (new personal high)
+- RHR: 
+	- 63 at 5am 
+	- 58 by 7am
 	- Indicates a rest day
 
 ## 🍽️ Meals
 - 5am: 1/2 cup steel cut oats
 - **Breakfast:** 3 eggs 1.5 slice sourdough bread 1/2 tbs butter
-- **Pre-workout:**  
-- **Lunch:**  
-- **Afternoon Meal:**  
-- **Dinner:**  
+- **Pre-workout:**  1/2 cup steel cut oats 1 banana, 2 scoop whey protein
+- **Lunch:**  8oz chicken breast 1 cup rice 1 cup broccoli
+- **Dinner 1:**  1.25 cups lean ground beef, 1.25 cups potato
+- **Dinner 2:**  
 - **Evening Snack:**  
 - **Other (beer, etc):**  
 
@@ -25,22 +30,18 @@
 - **Fat:**  
 
 ## 🏋️ Workout
-- Focus: abs & core
-- Exercises:  
-	- Kettle pull through (bear crawl position)
-	- TRX Pike, knee tuck
-	- Cable twist
-	- Weighted sit-ups
+- Focus: rest
+- Exercises:  rest
 
 ## 🏃 Cardio
-- Type:  
+- Type:  rest
 - Duration / Distance:  
 - Intensity:  
 - Active calories (watch):  
 
 ## 😴 Sleep
-- Duration:  
-- Quality:  
+- Duration:  6 hours
+- Quality:  excellent
 
 ## 🧠 Mood
 - Pre-workout mood:  
@@ -52,8 +53,8 @@
 - Estimated calories:  
 
 ## 🧍 Progress
-- Steps today:  
-- Recovery/DOMS:  
+- Steps today:  ~11000
+- Recovery/DOMS:  slightly in traps and legs
 
 ## 📸 Progress Pictures
 - [Attach or link here]
