--- a/journal/June/2025-06-10.md
+++ b/journal/June/2025-06-10.md
@@ -14,20 +14,20 @@
 	- Indicates a rest day
 
 ## 🍽️ Meals
-- 5am: 1/2 cup steel cut oats
-- **Breakfast:** 3 eggs 1.5 slice sourdough bread 1/2 tbs butter
-- **Pre-workout:**  1/2 cup steel cut oats 1 banana, 2 scoop whey protein
-- **Lunch:**  8oz chicken breast 1 cup rice 1 cup broccoli
-- **Dinner 1:**  1.25 cups lean ground beef, 1.25 cups potato
-- **Dinner 2:**  
-- **Evening Snack:**  
-- **Other (beer, etc):**  
+- 5am: 1/2 cup steel cut oats  
+- **Breakfast:** 3 eggs, 1.5 slices sourdough bread, 1/2 tbsp butter  
+- **Pre-workout:** 1/2 cup steel cut oats, 1 banana, 2 scoops whey protein  
+- **Lunch:** 8 oz chicken breast, 1 cup rice, 1 cup broccoli  
+- **Dinner 1:** 1.25 cups lean ground beef, 1.25 cups potato  
+- **Dinner 2:** 1/2 cup egg whites, 2 eggs, 2 slices sourdough bread, 1/2 tbsp butter  
+- **Evening Snack:** *(none)*  
+- **Other (beer, etc):** *(none)*
 
 ## 🧮 Est. Macros
-- **Calories:**   
-- **Protein:**  
-- **Carbs:**  
-- **Fat:**  
+- **Calories:** ~3,350 kcal  
+- **Protein:** ~255g  
+- **Carbs:** ~262g  
+- **Fat:** ~120g  
 
 ## 🏋️ Workout
 - Focus: rest
