Added some missing macro entries from june

--- a/journal/June/2025-06-04.md
+++ b/journal/June/2025-06-04.md
@@ -14,10 +14,10 @@
 - **Night snack:**  2 eggs, 1/2 cup egg whites, 1 slice sourdough 1 tbs butter 1/4 cup steel cut oats
 
 ## 🧮 Est. Macros
-- **Calories:**   
-- **Protein:**  
-- **Carbs:**  
-- **Fat:**  
+- **Calories:** ~3,730 kcal  
+- **Protein:** ~265g  
+- **Carbs:** ~340g  
+- **Fat:** ~135g  
 
 ## 🏋️ Workout
 - Focus:  rest
