--- a/journal/June/2025-06-06.md
+++ b/journal/June/2025-06-06.md
@@ -18,11 +18,11 @@
 - **Other (beer, etc):**  1 non-alcoholic beer 1 scoop ice cream
 
 ## 🧮 Est. Macros
-- **Calories:**   
-- **Protein:**  
-- **Carbs:**  
-- **Fat:**  
-
+- **Calories:** ~3,630 kcal  
+- **Protein:** ~280g  
+- **Carbs:** ~350g  
+- **Fat:** ~105g  
+- 
 ## 🏋️ Workout
 - Focus:  legs, abs biceps
 - Exercises:  
