--- a/journal/June/2025-06-08.md
+++ b/journal/June/2025-06-08.md
@@ -16,10 +16,10 @@
 - **Other (beer, etc):**  1 non alcoholic beer
 
 ## 🧮 Est. Macros
-- **Calories:**   
-- **Protein:**  
-- **Carbs:**  
-- **Fat:**  
+- **Calories:** ~3,410 kcal  
+- **Protein:** ~285g  
+- **Carbs:** ~300g  
+- **Fat:** ~100g  
 
 ## 🏋️ Workout
 - Focus:  rest
