--- a/journal/June/2025-06-11.md
+++ b/journal/June/2025-06-11.md
@@ -35,7 +35,7 @@
 - **Post-workout:**  1 scoop whey protein, 1/2 cup steel cut oats
 - **Lunch:**  1.25 cups beef/potato 1 cup broccoli
 - **Afternoon Meal:**  6.5 oz chicken 1.25 cups potato 1.25 cup broccoli
-- **Dinner:**  
+- **Dinner:**  1 cup lean beef 1.25 cups potato
 - **Evening Snack:**  
 - **Other (beer, etc):**  
 
@@ -49,12 +49,12 @@
 - Focus: back, arms
 - Exercises:  
 	- Chinups (10x no assist clean, but followed up by 7, 5... Not enough  sleep)
-	- Bicep long head
-	- bicep short head
+	- Bayesian curls drop sets
+	- Hammer rope curl drop sets
 	- *Exhausted*
 
 ## 🏃 Cardio
-- Type:  
+- Type:  rest
 - Duration / Distance:  
 - Intensity:  
 - Active calories (watch):  
@@ -64,9 +64,9 @@
 - Quality:  good, but short
 
 ## 🧠 Mood
-- Pre-workout mood:  
-- Post-workout mood:  
-- Notes:  
+- Pre-workout mood:  Energized
+- Post-workout mood:  Exhausted
+- Notes:  *Sleep impacted workout today*
 
 ## 🍫 Cheat Calories
 - Items:  
