Updated with new evolt scan and latest macros

--- a/journal/June/2025-06-11.md
+++ b/journal/June/2025-06-11.md
@@ -35,16 +35,16 @@
 - **Post-workout:**  1 scoop whey protein, 1/2 cup steel cut oats
 - **Lunch:**  1.25 cups beef/potato 1 cup broccoli
 - **Afternoon Meal:**  6.5 oz chicken 1.25 cups potato 1.25 cup broccoli
+- **Snack**: 1/2 cup steel cut oats 1 banana
 - **Dinner:**  1 cup lean beef 1.25 cups potato
-- **Evening Snack:**  
+- **Evening Snack:**  1.25 cup lean ground beef 1.25 cups potato
 - **Other (beer, etc):**  
 
 ## 🧮 Est. Macros
-- **Calories:**   
-- **Protein:**  
-- **Carbs:**  
-- **Fat:**  
-
+- **Calories:** ~4,090 kcal  
+- **Protein:** ~270g  
+- **Carbs:** ~414g  
+- **Fat:** ~124g  
 ## 🏋️ Workout
 - Focus: back, arms
 - Exercises:  
@@ -54,14 +54,14 @@
 	- *Exhausted*
 
 ## 🏃 Cardio
-- Type:  rest
+- Type:  
 - Duration / Distance:  
 - Intensity:  
 - Active calories (watch):  
 
 ## 😴 Sleep
 - Duration:  5.5 hours
-- Quality:  good, but short
+- Quality:  good, but too short
 
 ## 🧠 Mood
 - Pre-workout mood:  Energized
