Last couple of days

--- a/journal/June/2026-06-14.md
+++ b/journal/June/2026-06-14.md
@@ -1,17 +1,17 @@
-# 🗓️ 2025-06-12 – Day X
+# 🗓️ 2025-06-14 – Day X
 
 ## 📊 Weight
 - Morning weight: 
 - Body fat % (if scanned): 
 
 ## 🍽️ Meals
-- 5am: 2/3 cup quick oats 1 banana
-- **Breakfast:** 3 eggs 1.5 slices sourdough 1/2 tbs butter 1 scoop whey with greens
-- **Pre-workout:**  2 eggs 1/2 cup egg whites 1/2 tbs butter 1.5 slices sourdough
-- **Lunch:**  4.1 oz chicken breast, 1.25 cup mashed potato
-- **Dinner:**  7.1 oz chicken 1.25 cup potato
-- **Dinner:**  1.25 cup lean beef, 1.25 cups potato 
-- **Evening Snack:**  1/2 cup steel cut oats 1 banana 1 scoop whey
+- 5am: protein shake, 1/2 cup steel cut oats, banana
+- **Breakfast:** 2 eggs 1/2 cup egg whites, 1 slice sourdough 1/2 tbs butter
+- **Pre-workout:**  1/2 cup steel cut oats 1 banana
+- **Lunch:**  
+- **Afternoon Meal:**  
+- **Dinner:**  
+- **Evening Snack:**  
 - **Other (beer, etc):**  
 
 ## 🧮 Est. Macros
