added missing macros for yesterday

--- a/journal/June/2025-06-13.md
+++ b/journal/June/2025-06-13.md
@@ -16,10 +16,10 @@
 - **Other (beer, etc):**  1 non-alcholic beer
 
 ## 🧮 Est. Macros
-- **Calories:**   
-- **Protein:**  
-- **Carbs:**  
-- **Fat:**  
+- **Calories:** ~4,515 kcal  
+- **Protein:** ~288g  
+- **Carbs:** ~333g  
+- **Fat:** ~125g  
 
 ## 🏋️ Workout
 - Focus: 
