For purposes of recovery, adding RHR/HRV to monitor and renamingto stats

--- a/journal/June/2025-06-14.md
+++ b/journal/June/2025-06-14.md
@@ -8,31 +8,31 @@
 - 5am: protein shake, 1/2 cup steel cut oats, banana
 - **Breakfast:** 2 eggs 1/2 cup egg whites, 1 slice sourdough 1/2 tbs butter
 - **Pre-workout:**  1/2 cup steel cut oats 1 banana
-- **Lunch:**  
-- **Afternoon Meal:**  
-- **Dinner:**  
-- **Evening Snack:**  
+- **Lunch:**  5.5oz chicken breast 3/4 cup rice 1.5 cup broccoli 1 scoop whey
+- **Afternoon Meal:**  1.25 cup lean beef 1.25 cup rice
+- **Dinner:**  7oz chicken breast, 1 cup rice
+- **Evening Snack:**  1/2 cup steel cut oats 1 banana 1 scoop whey
 - **Other (beer, etc):**  
 
 ## 🧮 Est. Macros
-- **Calories:**   
-- **Protein:**  
-- **Carbs:**  
-- **Fat:**  
+- **Calories:** ~3,682 kcal  
+- **Protein:** ~298g  
+- **Carbs:** ~412g  
+- **Fat:** ~74g  
 
 ## 🏋️ Workout
-- Focus: 
+- Focus: rest
 - Exercises:  
 
 ## 🏃 Cardio
-- Type:  
-- Duration / Distance:  
-- Intensity:  
-- Active calories (watch):  
+- Type:  cycle
+- Duration / Distance:  30mins
+- Intensity:  light
+- Active calories (watch):  280
 
 ## 😴 Sleep
-- Duration:  
-- Quality:  
+- Duration:  9 hour
+- Quality:  excellent, fragmented
 
 ## 🧠 Mood
 - Pre-workout mood:  
