Adding the last couple days

--- a/journal/June/2025-06-17.md
+++ b/journal/June/2025-06-17.md
@@ -4,8 +4,8 @@
 - Morning weight: 
 - Body fat % (if scanned): 
 - HRV (Heart Rate Variability): 
-	- High: 106
-	- Low: 19 (post-workout)
+	- High: 106 ms
+	- Low: 19 ms (post-workout)
 - RHR (Resting Heart Rate): 57
 
 ## 🍽️ Meals
@@ -15,7 +15,10 @@
 - **Post-workout:**  1 scoop whey
 - **Afternoon Meal:**  2 eggs 1/2 cup egg whites, 2 slices sourdough 1/2 tbs butter
 - **Lunch:**  9.1oz chicken breast, 1.5 cup broccoli, 1.25 cup potato
-- **Snack:**  
+- **3pm Snack:**  6.1oz chicken breast, 1 cup broccoli, 1 cup potato
+- **4:30 snack:** 1/2 cup oatmeal 1 banana
+- **Dinner**: 1.25 cups lean beef 1.25 cups potato
+- **Snack:** *1 cup steel cut oats*
 - **Other (beer, etc):**  
 
 ## 🧮 Est. Macros
@@ -39,12 +42,12 @@
 - Active calories (watch):  
 
 ## 😴 Sleep
-- Duration:  
-- Quality:  
+- Duration:  7 hours
+- Quality:  excellent
 
 ## 🧠 Mood
-- Pre-workout mood:  
-- Post-workout mood:  
+- Pre-workout mood:  energized
+- Post-workout mood:  energized
 - Notes:  
 
 ## 🍫 Cheat Calories
@@ -52,7 +55,7 @@
 - Estimated calories:  
 
 ## 🧍 Progress
-- Steps today:  
-- Recovery/DOMS:  
+- Steps today:  ~10000
+- Recovery/DOMS:  legs back
 
 [[INDEX]]
