Added last couple days

--- a/journal/June/2025-06-20.md
+++ b/journal/June/2025-06-20.md
@@ -5,22 +5,23 @@
 - Body fat % (if scanned): 
 - HRV: 39ms morning 63ms in the day
 - RHR: 49
+- *Travel day to Nakusp*
 
 ## 🍽️ Meals
 - 5am: 1 scoop whey 2/3 cup quick oats
 - **Breakfast:** 3 eggs 1 slice sourdough
 - **Pre-workout:**  1.2 cup steel cut oats 1 banana
-- **Lunch:**  
-- **Afternoon Meal:**  
-- **Dinner:**  
-- **Evening Snack:**  
-- **Other (beer, etc):**  
+- **Lunch:**  7.5oz chicken breast, 1 cup potato
+- **Afternoon Meal:**  Ham sandwich , chicken sandwich
+- **Snack:**  Chicken sandwich
+- **Dinner:**  Prime rib dinner (Arrows lake lodge)
+- **Other (beer, etc):**  2 non-alcoholic 
 
 ## 🧮 Est. Macros
-- **Calories:**   
-- **Protein:**  
-- **Carbs:**  
-- **Fat:**  
+- **Calories:** 4361 kcal
+- **Protein:** 302g
+- **Carbs:** 510g
+- **Fat:** 160g
 
 ## 🏋️ Workout
 - Focus: 
