Added last week or so. Stopped tracking sleep unless it is suboptimal. Modified workout program slighlty.

--- a/journal/June/2025-06-23.md
+++ b/journal/June/2025-06-23.md
@@ -16,10 +16,10 @@
 - **Other (beer, etc):**  
 
 ## 🧮 Est. Macros
-- **Calories:**   
-- **Protein:**  
-- **Carbs:**  
-- **Fat:**  
+- **Calories:** 3677 kcal  
+- **Protein:** 285g  
+- **Carbs:** 421g  
+- **Fat:** 91g
 
 ## 🏋️ Workout
 - Focus: 
