--- a/journal/June/2025-06-29.md
+++ b/journal/June/2025-06-29.md
@@ -1,27 +1,23 @@
-# 🗓️ 2025-06-24 – Day X
+# 🗓️ 2025-06-29 – Day X
 
 ## 📊 Stats
 - Morning weight: 
 - Body fat % (if scanned): 
-- HRV: 129 ms
-- RHR: 48
 
 ## 🍽️ Meals
-- 5am: 2/3 cup quick oats 1 hard boiled egg
 - **Breakfast:** 2 eggs 1/2 cup egg whites 2 slices sourdough
-- **Pre-workout:**  2/3 cup quick oats 1 banana
-- **Lunch:**  1.5 cups lean beef 1.5 cup brown jasmine rice
-- **Afternoon Meal:**  6.4 oz chicken 1 cup rice 1 scoop whey 1/2 cup steel cut oats
-- **Dinner:**  2 eggs 1/2 cup egg whites 1 slice sourdough
-- **Evening Snack:**  3/4 cup lean beef 3/4 cup rice
+- **Pre-workout:**  
+- **Lunch:**  
+- **Afternoon Meal:**  
+- **Dinner:**  
+- **Evening Snack:**  
 - **Other (beer, etc):**  
 
-
 ## 🧮 Est. Macros
-- **Calories:** 3575 kcal  
-- **Protein:** 263g  
-- **Carbs:** 394g  
-- **Fat:** 96g
+- **Calories:**   
+- **Protein:**  
+- **Carbs:**  
+- **Fat:**  
 
 ## 🏋️ Workout
 - Focus: 
@@ -34,8 +30,8 @@
 - Active calories (watch):  
 
 ## 😴 Sleep
-- Duration:  
-- Quality:  
+- Duration:  5.5 hours
+- Quality:  A bit too short to do anything hard today
 
 ## 🧠 Mood
 - Pre-workout mood:  
