Add last few days

--- a/journal/June/2025-06-29.md
+++ b/journal/June/2025-06-29.md
@@ -5,12 +5,13 @@
 - Body fat % (if scanned): 
 
 ## 🍽️ Meals
-- **Breakfast:** 2 eggs 1/2 cup egg whites 2 slices sourdough
-- **Pre-workout:**  
-- **Lunch:**  
-- **Afternoon Meal:**  
-- **Dinner:**  
-- **Evening Snack:**  
+- **Breakfast:** 3 eggs 3/4 cup egg whites 3 slices sourdough
+- **Pre-workout:**  1/2 cup steel cut oats 1 banana
+- **Lunch:**  1 scoop whey with 1 cup oat milk
+- **Afternoon Meal:**  1 cup beef 1 cup potato
+- **Lunch:**  4.5 oz chicken breast 1 cup rice 1/2 cup steel cut oats
+- **Lunch:**  4 oz chicken breast 1 cup rice
+- **Evening Snack:**  1/2 cup steel cut oats 1 banana
 - **Other (beer, etc):**  
 
 ## 🧮 Est. Macros
@@ -24,10 +25,10 @@
 - Exercises:  
 
 ## 🏃 Cardio
-- Type:  
-- Duration / Distance:  
-- Intensity:  
-- Active calories (watch):  
+- Type:  hike
+- Duration / Distance:  6km
+- Intensity:  easy/moderate
+- Active calories (watch):  ~1300
 
 ## 😴 Sleep
 - Duration:  5.5 hours
@@ -43,7 +44,7 @@
 - Estimated calories:  
 
 ## 🧍 Progress
-- Steps today:  
-- Recovery/DOMS:  
+- Steps today:  ~18000
+- Recovery/DOMS:  chest/arms
 
 [[INDEX]]
